<resources>
    <string name="app_name" translatable="false">Zone</string>
    <string name="about_info">Từ HCMC-VNU</string>
    <string name="bypass">Bỏ qua</string>
    <string name="login_signup">Đăng nhập/Đăng kí</string>
    <string name="next">Tiếp tục</string>
    <string name="intro_title_1">Truy Cập Mọi Nơi</string>
    <string name="intro_title_2">Bạn Không Một Mình</string>
    <string name="intro_title_3">Hạnh Phúc</string>
    <string name="intro_title_4">Đăng Nhập Ngay</string>
    <string name="intro_desc_1">Tính năng cuộc gọi video có thể được truy cập từ bất cứ đâu để giúp bạn.</string>
    <string name="intro_desc_2">Không ai thích ở một mình và tính năng gọi điện, gọi qua video được tích hợp sẵn giúp bạn kết nối.</string>
    <string name="intro_desc_3">Với tính năng kết nối bạn bè gần đây, bạn sẽ tìm được người có thể trò chuyện cùng mình.</string>
    <string name="intro_desc_4">Để cùng tương tác, trò chuyện với bạn bè khắp nơi.</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="english" translatable="false">English</string>
    <string name="take_photo">Chụp ảnh</string>
    <string name="select_from_your_device">Chọn ảnh từ thiết bị</string>
    <string name="cancel">Hủy</string>
    <string name="camera_not_available">Camera không khả dụng</string>
    <string name="permission_error">Quyền bị từ chối. Vui lòng kích hoạt quyền!</string>
    <string name="typing">Đang nhập…</string>
    <string name="online">Đang hoạt động</string>
    <string name="last_seen">Xem lần cuối</string>
    <string name="yesterday">hôm qua</string>
    <string name="today">hôm nay</string>
    <string name="notifications">Thông báo</string>
    <string name="not_description">Bật thông báo</string>
    <string name="err_no_net">Không có kết nối Internet</string>
    <string name="logged_in_another_device">Số điện thoại này được đăng nhập vào một thiết bị khác!</string>
    <string name="login_again">Vui lòng đăng nhập lại để xác minh số của bạn</string>
    <string name="logout">Đăng xuất</string>
    <string name="create_by">Được tạo lúc</string>
    <string name="txt_resend">Gửi lại</string>
    <string name="txt_in">trong</string>
    <string name="otp_sent_succesfully">Mã xác nhận đã được gửi thành công.</string>
    <string name="invalid_verification_code">Mã xác nhận không đúng!</string>
    <string name="invalid_request">Yêu cầu không hợp lệ</string>
    <string name="welcome">Chào bạn!</string>
    <string name="we_will_send_otp">Chúng tôi sẽ gửi cho bạn <b> Mật Khẩu Dùng Một Lần </b> đến số điện thoại này</string>
    <string name="enter_mobile_no">Nhập Số Điện Thoại</string>
    <string name="get_otp">Nhận mã OTP</string>
    <string name="ex_mobile_no">Ví dụ: 123456789</string>
    <string name="invalid_phone_number">Số điện thoại không hợp lệ!</string>
    <string name="press_back_exit">Nhấn Back một lần nữa để thoát</string>
    <string name="enter_otp">Nhập mã xác thực đã được gửi đến số điện thoại của bạn.</string>
    <string name="otp_verification">Xác thực OTP</string>
    <string name="dont_receive">Không nhận được mã?</string>
    <string name="user_name">Tên người dùng</string>
    <string name="pics_name_des">Tên người dùng và hình ảnh này sẽ hiển thị cho người dùng Zone. Những người dùng khác có thể tìm thấy bạn bằng cách tìm kiếm.</string>
    <string name="please_select_country">Vui lòng chọn mã quốc gia!</string>
    <string name="error_name_setup">Tên không hợp lệ!</string>
    <string name="error_profile_photo">Vui lòng chọn ảnh đại diện!</string>
    <string name="chat_with_friends">Bạn bè</string>
    <string name="chat_with_groups">Nhóm</string>
    <string name="contacts">Danh bạ</string>
    <string name="profile">Cá nhân</string>
    <string name="write_message">Tin nhắn…</string>
    <string name="add_friend">Kết bạn</string>
    <string name="recording">Đang ghi…</string>
    <string name="nothing_recorded">Không có gì được ghi lại!</string>
    <string name="attachment_add_image">Hình ảnh/Đoạn phim</string>
    <string name="attachment_add_file">Tài liệu</string>
    <string name="attachment_quick_message">Tin nhắn nhanh</string>
    <string name="unknown">Người lạ</string>
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="mark_as_read">Đã đọc</string>
    <string name="new_messages">%d tin nhắn mới</string>
    <string name="new_messages_from">%d tin nhắn mới từ %d người bạn</string>
    <string name="reply">Trả lời</string>
    <string name="sent">Đã gửi</string>
    <string name="sending">Đang gửi…</string>
    <string name="delivered">Đã nhận</string>
    <string name="seen">Đã xem</string>
    <string name="failed">Không thành công</string>
    <string name="new_audio">Đã gửi tệp ghi âm mới</string>
    <string name="new_video">Đã gửi video mới</string>
    <string name="new_file">Đã gửi tệp đính kèm mới</string>
    <string name="is_typing">đang nhập…</string>
    <string name="setting">Thiết lập</string>
    <string name="profile_updated">Cập nhật thông tin thành công!</string>
    <string name="dark_mode">Chế độ ban đêm</string>
    <string name="edit_infor">Chỉnh sửa thông tin cá nhân</string>
    <string name="do_u_want_logout">Bạn muốn đăng xuất?</string>
    <string name="no_worries">Đừng lo lắng, khi bạn đăng nhập lại, tin nhắn của bạn sẽ được khôi phục tự động</string>
    <string name="create_new_group">Tạo nhóm mới</string>
    <string name="suggest">Gợi ý</string>
    <string name="search_for_name_and_phone">Tìm theo tên hoặc số điện thoại</string>
    <string name="selected">Đã chọn: %d</string>
    <string name="group_naming">Đặt tên nhóm</string>
    <string name="unnamed_group">Nhóm chưa đặt tên</string>
    <string name="click_to_add_the_name">Bấm để đặt tên</string>
    <string name="invalid_group_name">Tên nhóm không hợp lệ hoặc đã bỏ trống</string>
</resources>