<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.khtn.zone.viewmodel.ProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fitsSystemWindows="true">

            <com.khtn.zone.custom.view.Header
                android:id="@+id/header_single_chat_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerTitle="@string/setting"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:paddingHorizontal="@dimen/dp20">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp20"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <com.khtn.zone.custom.imageView.ImageProfile
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:profileUrl="@{viewModel.imageUrl}"
                            app:profileUri="@{viewModel.profilePicPath.toString()}"
                            app:profileProgress="@{viewModel.isUploading()}"/>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.userName}"
                        style="@style/TextBlackSemi15"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="2"
                        android:text="@{viewModel.about}"
                        style="@style/TextBlue90Semi10"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_background"
                android:layout_marginVertical="@dimen/dp15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/dp20">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp30"
                        android:layout_weight="1"
                        android:textColor="@color/blue_90"
                        android:textSize="@dimen/sp12"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/dp10"
                        android:text="@string/dark_mode"
                        app:drawableStartCompat="@drawable/ic_dark_mode" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp30"
                        android:checked="@{viewModel.isDarkMode()}"
                        android:onCheckedChanged="@{(switch, checked) -> viewModel.setIsDarkMode(checked)}"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="@dimen/dp20"
                    android:background="@drawable/bg_text_green_ripple_5dp"
                    android:text="@string/edit_infor"
                    android:textColor="@color/blue_90"
                    android:textSize="@dimen/sp12"
                    android:gravity="center_vertical"
                    android:drawablePadding="@dimen/dp10"
                    app:drawableStartCompat="@drawable/ic_info"
                    app:drawableEndCompat="@drawable/ic_arrow_blue_90" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="@dimen/dp20"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text_green_ripple_5dp"
                        android:text="@string/logout"
                        android:textSize="@dimen/sp15"
                        android:padding="@dimen/dp10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <LinearLayout
                        android:id="@+id/btn_change_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/color_background_receive"
                        android:elevation="@dimen/dp3"
                        android:paddingHorizontal="@dimen/dp10"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="@dimen/dp30"
                            android:layout_height="match_parent"
                            android:scaleType="fitCenter"
                            android:src='@{!viewModel.isEnglish() ? @drawable/ic_england_flag : @drawable/ic_vietnam_flag}' />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/dp10"
                            android:layout_marginStart="@dimen/dp5"
                            android:textSize="@dimen/sp13"
                            android:text='@{!viewModel.isEnglish() ?  @string/english :  @string/vietnamese}' />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>